# llvm-project

clang/lib/Frontend/: CompilerInvocation.cpp
llvm/include/llvm/Frontend/OpenMP/: OMPGridValues.h  OMPKinds.def
llvm/lib/Frontend/OpenMP/: OMPContext.cpp
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/include/: Types.h
openmp/libomptarget/DeviceRTL/src/: LibC.cpp  Mapping.cpp  Misc.cpp  State.cpp  Synchronization.cpp  Utils.cpp
openmp/libomptarget/plugins-nextgen/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/level0/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/level0/src/: rtl.cpp
